Bugzilla #5055 <https://bugs.freedesktop.org/show_bug.cgi?id=5055> Add     XDMSCRIPTDIR cpp substitution to allow modular tree builder/packager to     decide if scripts should go in config, lib, or data directories.